@@ -28,9 +28,15 @@ Calls native L<X509_NAME_oneline|https://docs.openssl.org/1.1.1/man3/X509_NAME_p
 
 C<method get_text_by_NID : int ($nid : int, $buf : mutable string, $len : int = -1);>
 
-Calls native L<X509_get_text_by_NID|https://docs.openssl.org/1.1.1/man3/X509_NAME_get_index_by_NID> functions given the pointer value of the instance, $nid, $buf, $len, and returns its return value.
+Calls native L<X509_NAME_get_text_by_NID|https://docs.openssl.org/1.1.1/man3/X509_NAME_get_index_by_NID> functions given the pointer value of the instance, $nid, $buf, $len, and returns its return value.
 
 If $buf is defined and $len is a negative value, $len is set to the length of $buf.
+
+=head2 get_entry
+
+C<method get_entry : L<Net::SSLeay::X509_NAME_ENTRY|SPVM::Net::SSLeay::X509_NAME_ENTRY> ($loc : int);>
+
+Calls native L<X509_NAME_get_entry|https://docs.openssl.org/3.1/man3/X509_NAME_get_index_by_NID> functions given the pointer value of the instance, $loc, creates a new L<Net::SSLeay::X509_NAME_ENTRY|SPVM::Net::SSLeay::X509_NAME_ENTRY> object, sets the pointer value of the new object to the return value of the native function, sets C<no_free> flag of the new object to 1, and returns the new object.
 
 =head2 DESTROY
 
