@@ -13,6 +13,9 @@ class TestCase::Net::SSLeay {
   use Net::SSLeay::Error;
   
   use Net::SSLeay::OBJ;
+  use Net::SSLeay::X509;
+  use Net::SSLeay::X509_NAME;
+  use Net::SSLeay::X509_NAME_ENTRY;
   
   static method test : int () {
     
